--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.11MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇨🇳 中国-173.0KB/s(Youtube:不良林), server: 120.241.236.113, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.12MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
   - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-211.8KB/s(Youtube:不良林), server: 120.241.236.218, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.35MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.99MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-265.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.143.66.20, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-952.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-952.5KB/s(Youtube:不良林)
