--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-265.1KB/s(Youtube:不良林), server: 120.241.236.218, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-451.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇭🇰 香港-439.1KB/s(Youtube:不良林), server: 73hk01.ok365.cyou, port: 80, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 73hk01.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-1.68MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 台湾-1.90MB/s(Youtube:不良林), server: 724tw01.ok365.cyou, port: 443, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 724tw01.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-265.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 38.143.66.99, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -66,7 +66,6 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
       - 🇭🇰 香港-367.6KB/s(Youtube:不良林)
       - 🔰 节点选择
@@ -75,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -90,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -106,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -131,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-265.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-439.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.68MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-265.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
